@@ -1,3 +1,9 @@
+*ovirt-engine-3.3.2 (13 Jan 2014)
+
+  13 Jan 2014; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.2.ebuild,
+  ovirt-engine-9999.ebuild:
+  Version bump
+
 *ovirt-engine-3.3.1 (26 Nov 2013)
 
   26 Nov 2013; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.1.ebuild,
